[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/square.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/pistol.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 0.196146, 4.14106, 0.0583145 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 0.2, 4.14, 0.06 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, 0 ), Vector2( 0, 0 ) ]
}

[node name="Enemy" type="Area2D" groups=[
"enemies",
"world",
]]
collision_layer = 4
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Pistol" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="OffsetTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
process_mode = 0

[node name="RotationTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 2 )
[connection signal="timeout" from="OffsetTimer" to="." method="_on_OffsetTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_RotationTimer_timeout"]
